Suppress illegal reflective access warnings and change multiplicity in 'workspace update' usage.